# ReX

./: .gitignore  Cargo.toml
examples/: qc.rs
src/: dimensions.rs  environments.rs  error.rs  functions.rs  lexer.rs  lib.rs  macros.rs
src/font/: kerning.rs  mod.rs  style.rs
src/layout/: builders.rs  convert.rs  engine.rs  mod.rs  spacing.rs
src/parser/: builders.rs  color.rs  engine.rs  mod.rs  nodes.rs  symbols.rs
src/render/: mod.rs  scene.rs
tests/: layout.rs  pass_fail.rs  style.rs
tests/common/: debug_render.rs  mod.rs  svg.rs  svg_diff.rs
